# nrt-fim

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  notice.md  pyproject.toml
config/: eval_config.yaml  eval_config_forecast.yaml  eval_forecast_config.yaml  training_config.yaml
config/hydra/: settings.yaml  training_config.yaml
examples/: create_animation.ipynb  create_grid.ipynb  create_sample_data.ipynb  download_stac.ipynb  fim_eval.ipynb  generate_sentinel_flood.ipynb  process_flood_extent.ipynb  process_static_inputs.ipynb  read_retrospective.ipynb  run_FModel_bmi.py  visualize_sentinel.ipynb
examples/prototype/: create_animation.ipynb  create_sample_data.ipynb  read_retrospective.ipynb  visualize_sentinel.ipynb
model_weights/NGWPC-6666/: README.md
model_weights/NGWPC-6671/: README.md
scripts/: eval.py  flood_percent_raster.py  make_eval.py  make_train.py  train.py
scripts/data_prep/: compute_stats.py  make_index.py  make_splits.py  preprocess_modis_targets.py
src/f1_trainer/: __init__.py
src/f1_trainer/data/: utils.py
src/trainer/: __init__.py
src/trainer/bmi/: __init__.py  bmi_FModel.py  bmi_base.py
src/trainer/data_prep/: flood_percent_raster.py  read_forecast_inputs.py  read_inputs.py
src/trainer/datamodules/: flood_datamodule.py
src/trainer/datasets/: flood_dataset.py  registry.py  statistics.py  stats_utils.py  train_dataset.py  utils.py  utils_spatial.py  utils_stac.py
src/trainer/evaluation/: validate.py
src/trainer/loss_functions/: mse_loss_func.py
src/trainer/nn/: cnn.py
src/trainer/preprocessing/: MODIS.py
src/trainer/utils/: geo_utils.py  normalization_methods.py  utils.py  utils_stats.py
statistics/: input_stats_20101001_20101003.json  input_stats_20101001_20101005.json  input_stats_20101001_20101010.json  input_stats_20101001_20111001.json  input_stats_20101002_20101005.json  input_stats_20111001_20121001.json  sample_statistics_coffeyville.json  target_stats.json  target_stats0.json  target_stats_20101001_20101005.json  target_stats_20101001_20101010.json  target_stats_20101001_20111001.json  target_stats_20101002_20101005.json  target_stats_20111001_20121001.json
tests/unit/trainer/datasets/: test_utils.py  test_utils_spatial.py
